menambahkan list pada index.html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
 </head>
 <body>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dignissimos dolor, non odio, eos dicta similique tenetur laboriosam iure ratione quae, vero delectus rerum accusamus quisquam saepe tempore placeat culpa.</p>
+	<ul>
+		<li>membuat design dengan bootstrap</li>
+		<li>membuat jquery dengan angular</li>
+	</ul>
 </body>
 </html>
